AI not ML anymore

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Greg (Grzegorz) Chojnowski, Ph.D.
 email: gchojnowski@gmail.com
-description: Macromolecules, big data, and machine learning
+description: Macromolecules, big data, and AI
 avatar: "/data/gchojnowski_1k_v2.jpg"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: 
