added email to footer

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ scholar_username: N7sQfAgAAAAJ&hl
 bluesky_username: gchojnowski
 github_username:  gchojnowski
 gitlab_username:  gchojnowski
-
+gmail_username: gchojnowski
 
 # Build settings
 theme: minima
